--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-<h1>ahoj</h1>
+<html lang="cs">
+    <head>
+        <title>
+            Klasicický obchod s nemovitostmi
+        </title>
+    <meta charset="UTF-8">
+    <link href="" rel="apple-touch-icon">
+    <meta name="destription" content="Stránka, u které budete totálně rožhavení z těchto nemovitostí">
+    <meta name="author" content="Jan Sebastián Kostlán">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/nemovitost.svg">
+    </head>
+
+    <body>
+
+    <nav>
+
+        <img src="./Media/logo.png">
+    </nav>
+    <header>
+        <img src="./Media/pageheader-1920w.jpg" width="320px">
+        <h1>Hm Building.cz s.r.o</h1>
+        <p>Liberecká stavební společnost</p>
+    </header>
+    <main>
+        <article class="article__max__width">
+            <h2>Využíjte škálu našich služeb</h2>
+            <p>Ačkoliv provadíme...</p>
+        </article>
+
+
+
+
+        <article class="article__with__image">
+
+        </article>
+        <article class="article__with__image">
+
+        </article>
+        <article class="article__with__image">
+
+        </article>
+        <article class="article__with__image">
+
+        </article>
+
+
+
+
+        <article class="article__background__image">
+            <p>Naše firma nabízí své služby ve stavebnictví od roku 2015</p>
+            <p>Za kvalitu naší práce ručíme.</p>
+            <button>Přesvědčit se</button>
+
+        </article>
+
+
+
+
+        <article class="article__max__width">
+        </article>
+
+
+
+
+    </main>
+    <footer>
+        <h2>Plácneme si na váš projekt</h2>
+        <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+        <button>Nezávazně poptat</button>
+    </footer>
+    </body>
+</html>
