--- a/index.html
+++ b/index.html
@@ -4,37 +4,65 @@
             Klasicický obchod s nemovitostmi
         </title>
     <meta charset="UTF-8">
-    <link href="" rel="apple-touch-icon">
+    <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
     <meta name="destription" content="Stránka, u které budete totálně rožhavení z těchto nemovitostí">
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="img/nemovitost.svg">
+    <link rel="stylesheet" href="styles/style.css">
+
+
+
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+        <link rel="stylesheet" href="styles/navbar.css">
     </head>
 
     <body>
 
-    <nav>
-
-        <img src="./Media/logo.png">
-    </nav>
     <header>
-        <img src="./Media/pageheader-1920w.jpg" width="320px">
+        <nav>
+
+            <div class="logo">
+                <a href="./index.html">
+                    <img src="./Media/logo.png" alt="Logo">
+                </a>
+            </div>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+                <div class='menu-button'>
+
+                </div>
+            </label>
+
+            <menu>
+                <li><a href=“#“>Domů</a></li>
+                <li><a href=“#“>Služby</a></li>
+                <li><a href=“#“>Reference </a></li>
+                <li><a href=“#“>O nás</a></li>
+                <li><a href=“#“>Kontakt</a></li>
+            </menu>
+        </nav>
+        <img src="./Media/pageheader-1920w.jpg" alt="pagehader">
         <h1>Hm Building.cz s.r.o</h1>
         <p>Liberecká stavební společnost</p>
     </header>
     <main>
         <article class="article__max__width">
-            <h2>Využíjte škálu našich služeb</h2>
-            <p>Ačkoliv provadíme...</p>
+            <h2>Využíjte škálu našich <span>služeb</span></h2>
+            <p>Ačkoliv provádíme především průmyslové stavby, není pro nás problém postavit Vám rodinný domek na klíč, nebo jen hrubou stavbu. Nejsou nám cizí ani rekonstrukce budov a jejich údržba a to včetně okolních ploch.</p>
         </article>
 
 
 
 
         <article class="article__with__image">
-
+            <img class="image__left" src="./Media/sluzba-novostavby-1200w.jpg" alt="novostavby">
+            <h2>Novostavby</h2>
+            <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.
+            </p>
+               <p> Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
+            <button class="button__outline">ano</button>
         </article>
+
         <article class="article__with__image">
 
         </article>
@@ -51,7 +79,7 @@
         <article class="article__background__image">
             <p>Naše firma nabízí své služby ve stavebnictví od roku 2015</p>
             <p>Za kvalitu naší práce ručíme.</p>
-            <button>Přesvědčit se</button>
+            <button class="button__normal">Přesvědčit se</button>
 
         </article>
 
@@ -68,7 +96,7 @@
     <footer>
         <h2>Plácneme si na váš projekt</h2>
         <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
-        <button>Nezávazně poptat</button>
+        <button class="button__footer">Nezávazně poptat</button>
     </footer>
     </body>
 </html>
