chci si zacvičit, ale musím dělat weby :(

--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <html lang="cs">
     <head>
-        <title>
-            Klasicický obchod s nemovitostmi
-        </title>
+        <title>Klasicický obchod s nemovitostmi</title>
     <meta charset="UTF-8">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
     <meta name="destription" content="Stránka, u které budete totálně rožhavení z těchto nemovitostí">
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
-
-
-
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
         <link rel="stylesheet" href="styles/navbar.css">
+        <link rel="stylesheet" href="styles/computer.css">
     </head>
 
     <body>
 
     <header>
         <nav>
-
             <div class="logo">
                 <a href="./index.html">
                     <img src="./Media/logo.png" alt="Logo">
@@ -41,13 +36,16 @@
                 <li><a href=“#“>Kontakt</a></li>
             </menu>
         </nav>
+
         <img src="./Media/pageheader-1920w.jpg" alt="pagehader">
         <h1>Hm Building.cz s.r.o</h1>
         <p>Liberecká stavební společnost</p>
     </header>
+
     <main>
+        <section>
         <article class="article__max__width">
-            <h2>Využíjte škálu našich <span>služeb</span></h2>
+            <p>Využíjte škálu našich <span>služeb</span></p>
             <p>Ačkoliv provádíme především průmyslové stavby, není pro nás problém postavit Vám rodinný domek na klíč, nebo jen hrubou stavbu. Nejsou nám cizí ani rekonstrukce budov a jejich údržba a to včetně okolních ploch.</p>
         </article>
 
@@ -55,46 +53,103 @@
 
 
         <article class="article__with__image">
-            <img class="image__left" src="./Media/sluzba-novostavby-1200w.jpg" alt="novostavby">
+            <aside>
+                <img class="image__left" src="./Media/sluzba-novostavby-1200w.jpg" alt="novostavby">
+            </aside>
+            <div class="hlavni_obsah">
             <h2>Novostavby</h2>
-            <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.
-            </p>
-               <p> Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
-            <button class="button__outline">ano</button>
+            <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.</p>
+            <p> Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
+            <button class="button__outline">Zobrazit více</button>
+            </div>
         </article>
 
         <article class="article__with__image">
+            <div class="hlavni_obsah">
+                <h2>Průmyslové stavby</h2>
+                <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci. </p>
+                <p>Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
+                <button class="button__outline">Zobrazit více</button>
+            </div>
+            <aside>
+                <img class="image__right" src="./Media/sluzba-prumyslove-stavby-1920w.jpg" alt="novostavby">
+            </aside>
+
+
+        </article>
+
+        <article class="article__with__image">
+            <aside>
+                <img class="image__left" src="./Media/sluzba-rekonstrukce-1920w.jpg" alt="novostavby">
+            </aside>
+            <div class="hlavni_obsah">
+            <h2>Rekonstrukce domů a jiných staveb</h2>
+            <p>Provádíme veškeré práce spojené s rekonstrukcí stávajících objektů. Pro naše klienty zajišťujeme dodatečné izolování objektů, zateplení objektů, změnu vnitřních i vnějších dispozic stávajících objektů a demolice stávajících staveb.</p>
+            <button class="button__outline">Zobrazit více</button>
+                </div>
 
         </article>
         <article class="article__with__image">
+            <div class="hlavni_obsah"><
+                <h2>Komunikace a zpevnění plochy</h2>
+                <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
+                <button class="button__outline">Zobrazit více</button>
+            </div>
+            <aside>
+                <img class="image__right" src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+            </aside>
+
 
         </article>
-        <article class="article__with__image">
 
-        </article>
+        </section>
 
-
-
-
+        <section>
         <article class="article__background__image">
             <p>Naše firma nabízí své služby ve stavebnictví od roku 2015</p>
             <p>Za kvalitu naší práce ručíme.</p>
             <button class="button__normal">Přesvědčit se</button>
 
         </article>
+        </section>
 
 
-
-
+        <section>
         <article class="article__max__width">
+            <p>Rádi vám ukážeme naše reference</p>
+            <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
         </article>
+        <article class="article__with__image">
+            <aside>
+                <img src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+            </aside>
+            <h3>Hasičská zbrojnice</h3>
+            <p>Celková rekonstrukce</p>
 
+        </article>
+            <article class="article__with__image">
+                <aside>
+                    <img src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+                </aside>
+                <h3>Hasičská zbrojnice</h3>
+                <p>Celková rekonstrukce</p>
 
+            </article>
+            <article class="article__with__image">
+                <aside>
+                    <img src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+                </aside>
+                <h3>Hasičská zbrojnice</h3>
+                <p>Celková rekonstrukce</p>
 
+            </article>
+            <button class="button__normal"><a href="reference.html">více referencí</a></button>
+
+        </section>
 
     </main>
     <footer>
-        <h2>Plácneme si na váš projekt</h2>
+        <p>Plácneme si na váš projekt</p>
         <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
         <button class="button__footer">Nezávazně poptat</button>
     </footer>
