opravdu jsem nepil

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         </article>
         <article class="article__with__image">
-            <div class="hlavni_obsah"><
+            <div class="hlavni_obsah">
                 <h2>Komunikace a zpevnění plochy</h2>
                 <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
                 <button class="button__outline">Zobrazit více</button>
@@ -114,37 +114,43 @@
         </section>
 
 
-        <section>
+        <section class="section__reference">
+
         <article class="article__max__width">
             <p>Rádi vám ukážeme naše reference</p>
             <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
         </article>
-        <article class="article__with__image">
+
+            <div class="obrazky__reference">
+        <article class="centrovani__textu">
             <aside>
-                <img src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+                <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
             </aside>
+
             <h3>Hasičská zbrojnice</h3>
             <p>Celková rekonstrukce</p>
 
         </article>
-            <article class="article__with__image">
-                <aside>
-                    <img src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+            <article class="centrovani__textu">
+                    <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
                 </aside>
-                <h3>Hasičská zbrojnice</h3>
+                <h3>Samoobslužná prádelna</h3>
                 <p>Celková rekonstrukce</p>
 
             </article>
-            <article class="article__with__image">
+            <article class="centrovani__textu">
                 <aside>
-                    <img src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+                    <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
                 </aside>
-                <h3>Hasičská zbrojnice</h3>
+                <h3>Venkovní plochy restyl</h3>
                 <p>Celková rekonstrukce</p>
 
             </article>
+            </div>
+
+            <div class="centrovani__elementu">
             <button class="button__normal"><a href="reference.html">více referencí</a></button>
-
+            </div>
         </section>
 
     </main>
