--- a/o_nas.html
+++ b/o_nas.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<main>
+    <h1>O nás</h1>
+    <p>polečnost HM Building.cz s.r.o. nabízí své služby ve stavebnictví od roku 2015, a to převážně po Libereckém kraji. </p>
+    <p> V oboru pozemního stavitelství provádíme stavbu a rekonstrukci:</p>
+    <ul class="odrazky__oranzove">
+        <li>Průmyslových staveb</li>
+        <li>obytných staveb</li>
+        <li>staveb občanské vybavenosti</li>
+        <li>komunikaci vozidlovýých, ale i pěších</li>
+    </ul>
+    <p>Zakázky můžeme řešit tzv. na klíč, kde jsme schopni zajistit dodávky a montáž elektro-instalace NN a VN, zdravotně – technické instalace, ústředního vytápění, vzduchotechniky, MaR, případně jsme schopni, po dohodě s investorem, dodat pouze některou ucelenou část celkové zakázky.</p>
+
+        <p>Naše firma taktéž zajišťuje projekční služby a služby týkající se statického posouzení staveb v oboru pozemního stavitelství a dále jsme schopni zajistit investorsko–inženýrské služby.</p>
+
+        <p>Záruční doba na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
+</main>
 
 </body>
 </html>
