--- a/reference_hasicska_zbrojnice.html
+++ b/reference_hasicska_zbrojnice.html
@@ -3,8 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
-
+<main>
+    <article class="article--reference">
+        <figure class="article__title">
+            <h2>Hasičská zbrojnice</h2>
+            <p>Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
+        </figure>
+        <img src="Media/reference/hasicska-zbrojnice/reference-hz-01.jpeg">
+        <img src="Media/reference/hasicska-zbrojnice/reference-hz-02.jpeg">
+        <img src="Media/reference/hasicska-zbrojnice/reference-hz-03.jpeg">
+        <img src="Media/reference/hasicska-zbrojnice/reference-hz-04.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-05.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-06.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-07.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-08.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-09.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-10.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-11.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-12.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-14.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-15.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-16.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-17.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-18.jpeg">
+        <img src="Media//reference/hasicska-zbrojnice/reference-hz-last.jpeg">
+    </article>
+</main>
 </body>
 </html>
