opravdu jsem nepil

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </label>
 
             <menu>
-                <li><a href=“#“>Domů</a></li>
+                <li><a href=""“>Domů</a></li>
                 <li><a href=“#“>Služby</a></li>
                 <li><a href=“#“>Reference </a></li>
                 <li><a href=“#“>O nás</a></li>
@@ -133,7 +133,6 @@
         </article>
             <article class="centrovani__textu">
                     <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
-                </aside>
                 <h3>Samoobslužná prádelna</h3>
                 <p>Celková rekonstrukce</p>
 
