--- a/reference_hasicska_zbrojnice.html
+++ b/reference_hasicska_zbrojnice.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
-<main>
-    <article class="article--reference">
-        <figure class="article__title">
-            <h2>Hasičská zbrojnice</h2>
-            <p>Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
-        </figure>
+<figure class="article__title">
+    <h2>Hasičská zbrojnice</h2>
+    <p>Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
+</figure>
+    <section class="article--reference">
         <img src="Media/reference/hasicska-zbrojnice/reference-hz-01.jpeg">
         <img src="Media/reference/hasicska-zbrojnice/reference-hz-02.jpeg">
         <img src="Media/reference/hasicska-zbrojnice/reference-hz-03.jpeg">
@@ -33,7 +32,6 @@
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-17.jpeg">
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-18.jpeg">
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-last.jpeg">
-    </article>
-</main>
+    </section>
 </body>
 </html>
