--- a/kontakt.html
+++ b/kontakt.html
@@ -6,16 +6,32 @@
 </head>
 <body>
 <main>
-    <h1>kontaktujte nás</h1>
-    <p>Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
+    <h1>Kontaktujte nás</h1>
+    <div class="kontakt__icons">
 
-    <div class="obsah">
     </div>
+    <p>Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
+    <img src="Media/mapa.jpg">
     <form>
-        <label for="fname">First name:</label><br>
+        <p>Nezávazná poptávka služeb</p>
+        <p>Plácneme si pro Váš projekt? Nezávazně nás kontaktujte a domluvme vše potřebné.
+        </p>
+        <label for="fname">Jméno a příjmení:</label><br>
         <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname">
+        <label for="fname">E-mail:</label><br>
+        <input type="text" id="hovno" name="fname"><br>
+        <label for="fname">Telefon:</label><br>
+        <input type="text" id="telefon" name="fname"><br>
+        <label for="category">Kategorie:</label><br>
+        <select id="category" name="category">
+            <option value="gulag">Psychologie</option>
+            <option value="Ozzy je powerlifter">Ozzy</option>
+            <option value="Kryčfalušij">Hanička Zagorova</option>
+        </select><br>
+        <textarea name="message" rows="10" cols="30">Preferuji brunety oproti blondýnám</textarea>
+        <buuton>
+
+        </buuton>
     </form>
 </main>
 
