--- a/o_nas.html
+++ b/o_nas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>stranka</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
     <link rel="stylesheet" href="styles/navbar.css">
@@ -10,6 +10,7 @@
 </head>
 <body>
 <main>
+    <article>
     <h1>O nás</h1>
     <p>polečnost HM Building.cz s.r.o. nabízí své služby ve stavebnictví od roku 2015, a to převážně po Libereckém kraji. </p>
     <p> V oboru pozemního stavitelství provádíme stavbu a rekonstrukci:</p>
@@ -24,7 +25,13 @@
         <p>Naše firma taktéž zajišťuje projekční služby a služby týkající se statického posouzení staveb v oboru pozemního stavitelství a dále jsme schopni zajistit investorsko–inženýrské služby.</p>
 
         <p>Záruční doba na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
+    </article>
 </main>
+<footer>
+    <p>Plácneme si na váš projekt</p>
+    <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+    <button class="button__footer">Nezávazně poptat</button>
+</footer>
 
 </body>
 </html>
