--- a/reference.html
+++ b/reference.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
+    <meta name="destription" content="Stránka, u které budete totálně rožhavení z těchto nemovitostí">
+    <meta name="author" content="Jan Sebastián Kostlán">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/computer.css">
+</head>
 </head>
 <body>
+<section class="section__reference">
 
+    <article class="article__max__width">
+        <p class="velky_a_tucny">Rádi vám ukážeme naše reference</p>
+        <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
+    </article>
+
+    <div class="obrazky__reference">
+        <article class="centrovani__textu">
+            <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
+            <div class="overlay">
+                <h3>Hasičská zbrojnice</h3>
+                <p>Celková rekonstrukce</p>
+            </div>
+
+        </article>
+
+        <article class="centrovani__textu">
+            <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
+            <div class="overlay">
+                <h3>Samoobslužná prádelna</h3>
+                <p>Celková rekonstrukce</p>
+            </div>
+        </article>
+
+        <article class="centrovani__textu">
+            <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
+            <div class="overlay">
+                <h3>Venkovní plochy restyl</h3>
+                <p>Celková rekonstrukce</p>
+            </div>
+        </article>
+
+    </div>
+
+    <div class="centrovani__elementu">
+        <button class="button__normal"><a href="reference.html">více referencí</a></button>
+    </div>
+</section>
+
+</main>
+<footer>
+    <p>Plácneme si na váš projekt</p>
+    <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+    <button class="button__footer">Nezávazně poptat</button>
+</footer>
 </body>
 </html>
