--- a/reference_samoobluzna_prace.html
+++ b/reference_samoobluzna_prace.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<figure class="article__title">
+    <h1>Samoobslužná prádelná</h1>
+    <p>Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
+</figure>
+<section class="article--reference">
+    <img src="Media/reference/pradelna/reference-pradelna-01.jpeg">
+    <img src="Media/reference/pradelna/reference-pradelna-02.jpeg">
+    <img src="Media/reference/pradelna/reference-pradelna-03.jpeg">
+    <img src="Media/reference/pradelna/reference-pradelna-04.jpeg">
+    <img src="Media/reference/pradelna/reference-pradelna-05.jpeg">
 
+</section>
+<footer>
+    <p>Plácneme si na váš projekt</p>
+    <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+    <button class="button__footer">Nezávazně poptat</button>
+</footer>
 </body>
 </html>
