--- a/reference_venkovsni_plochy.html
+++ b/reference_venkovsni_plochy.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<figure class="article__title">
+    <h1>Venkovní plochy restor</h1>
+    <p>Provedení venkovních ploch Restyl./p>
+</figure>
+<section class="article--reference">
+    <img src="Media/reference/plochy-restyl/reference-restyl-01.jpeg">
+    <img src="Media/reference/plochy-restyl/reference-restyl-02.jpeg">
+    <img src="Media/reference/plochy-restyl/reference-restyl-03.jpeg">
+    <img src="Media/reference/plochy-restyl/reference-restyl-04.jpeg">
+</section>
 
 </body>
 </html>
