--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <input id="menu-toggle" type="checkbox" />
             <label class='menu-button-container' for="menu-toggle">
                 <div class='menu-button'>
-
+                    <p>menu</p>
                 </div>
             </label>
 
             <menu>
-                <li><a href=""“>Domů</a></li>
+                <li><a href="#"“>Domů</a></li>
                 <li><a href=“#“>Služby</a></li>
                 <li><a href=“#“>Reference </a></li>
                 <li><a href=“#“>O nás</a></li>
@@ -45,14 +45,14 @@
     <main>
         <section>
         <article class="article__max__width">
-            <p>Využíjte škálu našich <span>služeb</span></p>
+            <p class="velky_a_tucny">Využíjte škálu našich <span>služeb</span></p>
             <p>Ačkoliv provádíme především průmyslové stavby, není pro nás problém postavit Vám rodinný domek na klíč, nebo jen hrubou stavbu. Nejsou nám cizí ani rekonstrukce budov a jejich údržba a to včetně okolních ploch.</p>
         </article>
 
 
 
 
-        <article class="article__with__image">
+        <article class="article__with__image left">
             <aside>
                 <img class="image__left" src="./Media/sluzba-novostavby-1200w.jpg" alt="novostavby">
             </aside>
@@ -65,15 +65,15 @@
         </article>
 
         <article class="article__with__image">
+            <aside>
+                <img class="image__right" src="./Media/sluzba-prumyslove-stavby-1920w.jpg" alt="novostavby">
+            </aside>
             <div class="hlavni_obsah">
                 <h2>Průmyslové stavby</h2>
                 <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci. </p>
                 <p>Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
                 <button class="button__outline">Zobrazit více</button>
             </div>
-            <aside>
-                <img class="image__right" src="./Media/sluzba-prumyslove-stavby-1920w.jpg" alt="novostavby">
-            </aside>
 
 
         </article>
@@ -90,21 +90,21 @@
 
         </article>
         <article class="article__with__image">
+            <aside>
+                <img class="image__left" src="./Media/sluzba-rekonstrukce-1920w.jpg" alt="novostavby">
+            </aside>
             <div class="hlavni_obsah">
                 <h2>Komunikace a zpevnění plochy</h2>
                 <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
                 <button class="button__outline">Zobrazit více</button>
             </div>
-            <aside>
-                <img class="image__right" src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
-            </aside>
 
 
         </article>
 
         </section>
 
-        <section>
+        <section class="section__without__space">
         <article class="article__background__image">
             <p>Naše firma nabízí své služby ve stavebnictví od roku 2015</p>
             <p>Za kvalitu naší práce ručíme.</p>
@@ -117,34 +117,36 @@
         <section class="section__reference">
 
         <article class="article__max__width">
-            <p>Rádi vám ukážeme naše reference</p>
+            <p class="velky_a_tucny">Rádi vám ukážeme naše reference</p>
             <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
         </article>
 
             <div class="obrazky__reference">
         <article class="centrovani__textu">
-            <aside>
-                <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-            </aside>
-
+            <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
+            <div class="overlay">
             <h3>Hasičská zbrojnice</h3>
             <p>Celková rekonstrukce</p>
+            </div>
 
         </article>
+
             <article class="centrovani__textu">
                     <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
+                <div class="overlay">
                 <h3>Samoobslužná prádelna</h3>
                 <p>Celková rekonstrukce</p>
-
+                </div>
             </article>
+
             <article class="centrovani__textu">
-                <aside>
                     <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-                </aside>
+                <div class="overlay">
                 <h3>Venkovní plochy restyl</h3>
                 <p>Celková rekonstrukce</p>
-
+                </div>
             </article>
+
             </div>
 
             <div class="centrovani__elementu">
