--- a/sluzba_prumyslove_stavby.html
+++ b/sluzba_prumyslove_stavby.html
@@ -11,16 +11,17 @@
 <body>
 <main>
     <article>
-        <h1>Novostavby</h1>
-        <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci. Provádíme stavby jak průmyslového typu, tak rodinné stavby. Stavba je prováděna dle projektové dokumentace dodané investorem
-            a v rozsahu dle smlouvy o dílo, která obsahuje jasně definované ceny dle položkového rozpočtu.</p>
+        <h1>Průmyslové stavby</h1>
+        <p>Realizujeme průmyslové objekty ocelové konstrukce, lehké ocelové (stanového typu), z prefabrikovaných dílců atd. Vzhledem k tomu, že vlastníme dostatek vlastní mechanizace, stáváme se nezávislými na ostatních subdodávkách a tím se dostáváme na přijatelné ceny.</p>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
             <li>základové konstrukce</li>
             <li>zděné konstrukce</li>
-            <li>montované konstrukce</li>
-            <li>úpravy povrchů</li>
-            <li>střešní konstrukce</li>
+            <ul>
+                <li>ocelové</li>
+                <li>ŽLB prefabrikované</li>
+                <li>lehké ocelové (tzv. stanového typu)</li>
+            </ul>
         </ul>
     </article>
 </main>
@@ -31,6 +32,5 @@
 </footer>
 </body>
 </html>
-
 
 
