firefox je nejlepší

--- a/sluzba_komunikace.html
+++ b/sluzba_komunikace.html
@@ -15,20 +15,20 @@
 <body>
 <main>
     <article>
-        <h1>O nás</h1>
-        <p>polečnost HM Building.cz s.r.o. nabízí své služby ve stavebnictví od roku 2015, a to převážně po Libereckém kraji. </p>
-        <p> V oboru pozemního stavitelství provádíme stavbu a rekonstrukci:</p>
+        <h1>Komunikace a zpevněné plochy</h1>
+        <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
+        <p>Kryt komunikace</p>
         <ul class="odrazky__oranzove">
-            <li>Průmyslových staveb</li>
-            <li>obytných staveb</li>
-            <li>staveb občanské vybavenosti</li>
-            <li>komunikaci vozidlovýých, ale i pěších</li>
+            <li>živočisných</li>
+            <li>betonový</li>
+            <li>dlážděný (kámen, betonová dlažba...)</li>
         </ul>
-        <p>Zakázky můžeme řešit tzv. na klíč, kde jsme schopni zajistit dodávky a montáž elektro-instalace NN a VN, zdravotně – technické instalace, ústředního vytápění, vzduchotechniky, MaR, případně jsme schopni, po dohodě s investorem, dodat pouze některou ucelenou část celkové zakázky.</p>
-
-        <p>Naše firma taktéž zajišťuje projekční služby a služby týkající se statického posouzení staveb v oboru pozemního stavitelství a dále jsme schopni zajistit investorsko–inženýrské služby.</p>
-
-        <p>Záruční doba na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
+        <p>Při realizaci jakékoliv zpevněné plochy dokážeme navrhnout celkovou skladbu konstrukce, s ohledem na její způsob použití a umístění.</p>
+        <ul class="odrazky__oranzove">
+            <li>zemní práce</li>
+            <li>podklady pod komunikace</li>
+            <li>komunikace pro pěší i pojezdové</li>
+        </ul>
     </article>
 </main>
 <footer>
