--- a/sluzba_rekonstrukce.html
+++ b/sluzba_rekonstrukce.html
@@ -3,8 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
-
+<main>
+    <article>
+        <h1>Rekonstrukce domů</h1>
+        <p>Provádíme veškeré práce spojené s rekonstrukcí stávajících objektů.</p>
+        <p>Dodatečné izolování objektů</p>
+        <ul class="odrazky__oranzove">
+            <li>zemní práce</li>
+            <li>základové konstrukce</li>
+        </ul>
+        <p>Zateplení objektů</p>
+        <ul class="odrazky__oranzove">
+            <li>zatelení fasád</li>
+            <li>výměna oken a otvorových výplní</li>
+        </ul>
+        <p>Změna vnitřních i vnějších dispozic stávajících objektů</p>
+        <ul class="odrazky__oranzove">
+            <li>bourací práce</li>
+            <li>zednické práce</li>
+            <li>sádrokartonářské práce</li>
+        </ul>
+        <p>Demolice stávajících objektů</p>
+        <ul class="odrazky__oranzove">
+            <li>bourací a demoliční práce</li>
+            <li>Odizolování konstrukcí pod/nad úrovní terénu</li>
+            <li>zateplení objektů</li>
+            <li>úprava vnitřních dispozic</li>
+            <li>výměnná otvorových výplní</li>
+        </ul>
+    </article>
+</main>
+<footer>
+    <p>Plácneme si na váš projekt</p>
+    <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+    <button class="button__footer">Nezávazně poptat</button>
+</footer>
 </body>
 </html>
