radši bych šel do fitka

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </menu>
         </nav>
 
-        <img src="./Media/pageheader-1920w.jpg" alt="pagehader">
+        <img src="./Media/pageheader-1920w.jpg" alt="pagehader" class="shadow">
         <h1>Hm Building.cz s.r.o</h1>
         <p>Liberecká stavební společnost</p>
     </header>
@@ -52,7 +52,7 @@
 
 
 
-        <article class="article__with__image left">
+        <article class="article__with__image">
             <aside>
                 <img class="image__left" src="./Media/sluzba-novostavby-1200w.jpg" alt="novostavby">
             </aside>
@@ -64,7 +64,7 @@
             </div>
         </article>
 
-        <article class="article__with__image">
+        <article class="article__with__image reverse">
             <aside>
                 <img class="image__right" src="./Media/sluzba-prumyslove-stavby-1920w.jpg" alt="novostavby">
             </aside>
@@ -89,7 +89,7 @@
                 </div>
 
         </article>
-        <article class="article__with__image">
+        <article class="article__with__image reverse">
             <aside>
                 <img class="image__left" src="./Media/sluzba-rekonstrukce-1920w.jpg" alt="novostavby">
             </aside>
