--- a/o_nas.html
+++ b/o_nas.html
@@ -9,6 +9,31 @@
     <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<header>
+    <nav>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./Media/logo.png" alt="Logo">
+            </a>
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'>
+                <p>menu</p>
+            </div>
+        </label>
+
+        <menu>
+            <li><a href="#"“>Domů</a></li>
+            <li><a href=“#“>Služby</a></li>
+            <li><a href=“#“>Reference </a></li>
+            <li><a href=“#“>O nás</a></li>
+            <li><a href=“#“>Kontakt</a></li>
+        </menu>
+    </nav>
+
+    <!--<img src="./Media/pageheader-1920w.jpg" alt="pagehader">-->
+</header>
 <main>
     <article>
     <h1>O nás</h1>
