--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </menu>
         </nav>
 
-        <img src="./Media/pageheader-1920w.jpg" alt="pagehader" class="shadow">
+        <img src="./Media/pageheader-1920w.jpg" alt="pagehader">
         <h1>Hm Building.cz s.r.o</h1>
         <p>Liberecká stavební společnost</p>
     </header>
