--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
             </label>
 
             <menu>
-                <li><a href="#"“>Domů</a></li>
-                <li><a href=“#“>Služby</a></li>
-                <li><a href=“#“>Reference </a></li>
-                <li><a href=“#“>O nás</a></li>
-                <li><a href=“#“>Kontakt</a></li>
+                <li><a href="index.html"“>Domů</a></li>
+                <li><a href=““>Služby</a></li>
+                <li><a href="reference.html">Reference </a></li>
+                <li><a href="o_nas.html">O nás</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </menu>
         </nav>
 
-        <img src="./Media/pageheader-1920w.jpg" alt="pagehader">
         <h1>Hm Building.cz s.r.o</h1>
         <p>Liberecká stavební společnost</p>
     </header>
@@ -124,24 +123,24 @@
             <div class="obrazky__reference">
         <article class="centrovani__textu">
             <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-            <div class="overlay">
+            <div>
             <h3>Hasičská zbrojnice</h3>
             <p>Celková rekonstrukce</p>
             </div>
 
         </article>
 
-            <article class="centrovani__textu">
+            <article class="centrovani__textu article__margin">
                     <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
-                <div class="overlay">
+                <div>
                 <h3>Samoobslužná prádelna</h3>
                 <p>Celková rekonstrukce</p>
                 </div>
             </article>
 
-            <article class="centrovani__textu">
+            <article class="centrovani__textu article__ma">
                     <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-                <div class="overlay">
+                <div>
                 <h3>Venkovní plochy restyl</h3>
                 <p>Celková rekonstrukce</p>
                 </div>
