tedka je spravný čas hodit si s lanem

--- a/sluzba_rekonstrukce.html
+++ b/sluzba_rekonstrukce.html
@@ -9,6 +9,32 @@
     <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<header class="header__next__page">
+    <nav>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./Media/logo.png" alt="Logo">
+            </a>
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'>
+                <p>menu</p>
+            </div>
+        </label>
+
+        <menu>
+            <li><a href="index.html"“>Domů</a></li>
+            <li><a href=#sluzby>Služby</a></li>
+            <li><a href="reference.html">Reference </a></li>
+            <li><a href="o_nas.html">O nás</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </menu>
+    </nav>
+
+    <h1>Hm Building.cz s.r.o</h1>
+    <p>Liberecká stavební společnost</p>
+</header>
 <main>
     <article>
         <h1>Rekonstrukce domů</h1>
