--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
 
-    <header>
+    <header class="header___main__page">
         <nav>
             <div class="logo">
                 <a href="./index.html">
@@ -30,7 +30,7 @@
 
             <menu>
                 <li><a href="index.html"“>Domů</a></li>
-                <li><a href=““>Služby</a></li>
+                <li><a href=#sluzby>Služby</a></li>
                 <li><a href="reference.html">Reference </a></li>
                 <li><a href="o_nas.html">O nás</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
@@ -42,7 +42,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="sluzby">
         <article class="article__max__width">
             <p class="velky_a_tucny">Využíjte škálu našich <span>služeb</span></p>
             <p>Ačkoliv provádíme především průmyslové stavby, není pro nás problém postavit Vám rodinný domek na klíč, nebo jen hrubou stavbu. Nejsou nám cizí ani rekonstrukce budov a jejich údržba a to včetně okolních ploch.</p>
@@ -122,24 +122,30 @@
 
             <div class="obrazky__reference">
         <article class="centrovani__textu">
+            <aside style="background-color: red">
             <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-            <div>
+            </aside>
+            <div class="overlay_2">
             <h3>Hasičská zbrojnice</h3>
             <p>Celková rekonstrukce</p>
             </div>
 
         </article>
 
-            <article class="centrovani__textu article__margin">
+            <article class="centrovani__textu">
+                <aside>
                     <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
+                </aside>
                 <div>
                 <h3>Samoobslužná prádelna</h3>
                 <p>Celková rekonstrukce</p>
                 </div>
             </article>
 
-            <article class="centrovani__textu article__ma">
+            <article class="centrovani__textu">
+                <aside>
                     <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
+                </aside>
                 <div>
                 <h3>Venkovní plochy restyl</h3>
                 <p>Celková rekonstrukce</p>
