--- a/kontakt.html
+++ b/kontakt.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/x-icon" href="Media/logo.png">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<header class="header__next__page">
+    <nav>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./Media/logo.png" alt="Logo">
+            </a>
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'>
+                <p>menu</p>
+            </div>
+        </label>
+
+        <menu>
+            <li><a href="index.html"“>Domů</a></li>
+            <li><a href=#sluzby>Služby</a></li>
+            <li><a href="reference.html">Reference </a></li>
+            <li><a href="o_nas.html">O nás</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </menu>
+    </nav>
+
+    <h1>Hm Building.cz s.r.o</h1>
+    <p>Liberecká stavební společnost</p>
+</header>
+
 <main>
     <h1>Kontaktujte nás</h1>
     <div class="kontakt__icons">
