--- a/o_nas.html
+++ b/o_nas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
-<header>
+<header class="header__next__page">
     <nav>
         <div class="logo">
             <a href="./index.html">
@@ -24,15 +24,16 @@
         </label>
 
         <menu>
-            <li><a href="#"“>Domů</a></li>
-            <li><a href=“#“>Služby</a></li>
-            <li><a href=“#“>Reference </a></li>
-            <li><a href=“#“>O nás</a></li>
-            <li><a href=“#“>Kontakt</a></li>
+            <li><a href="index.html"“>Domů</a></li>
+            <li><a href=#sluzby>Služby</a></li>
+            <li><a href="reference.html">Reference </a></li>
+            <li><a href="o_nas.html">O nás</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
         </menu>
     </nav>
 
-    <!--<img src="./Media/pageheader-1920w.jpg" alt="pagehader">-->
+    <h1>Hm Building.cz s.r.o</h1>
+    <p>Liberecká stavební společnost</p>
 </header>
 <main>
     <article>
