--- a/reference.html
+++ b/reference.html
@@ -14,6 +14,32 @@
 </head>
 </head>
 <body>
+<header class="header__next__page">
+    <nav>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./Media/logo.png" alt="Logo">
+            </a>
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'>
+                <p>menu</p>
+            </div>
+        </label>
+
+        <menu>
+            <li><a href="index.html"“>Domů</a></li>
+            <li><a href=#sluzby>Služby</a></li>
+            <li><a href="reference.html">Reference </a></li>
+            <li><a href="o_nas.html">O nás</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </menu>
+    </nav>
+
+    <h1>Hm Building.cz s.r.o</h1>
+    <p>Liberecká stavební společnost</p>
+</header>
 <section class="section__reference">
 
     <article class="article__max__width">
@@ -47,10 +73,6 @@
             </div>
         </article>
 
-    </div>
-
-    <div class="centrovani__elementu">
-        <button class="button__normal"><a href="reference.html">více referencí</a></button>
     </div>
 </section>
 
