--- a/reference_hasicska_zbrojnice.html
+++ b/reference_hasicska_zbrojnice.html
@@ -9,6 +9,32 @@
     <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<header class="header__next__page">
+    <nav>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./Media/logo.png" alt="Logo">
+            </a>
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'>
+                <p>menu</p>
+            </div>
+        </label>
+
+        <menu>
+            <li><a href="index.html"“>Domů</a></li>
+            <li><a href=#sluzby>Služby</a></li>
+            <li><a href="reference.html">Reference </a></li>
+            <li><a href="o_nas.html">O nás</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </menu>
+    </nav>
+
+    <h1>Hm Building.cz s.r.o</h1>
+    <p>Liberecká stavební společnost</p>
+</header>
 <figure class="article__title">
     <h1>Hasičská zbrojnice</h1>
     <p>Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
@@ -33,5 +59,10 @@
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-18.jpeg">
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-last.jpeg">
     </section>
+<footer>
+    <p>Plácneme si na váš projekt</p>
+    <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+    <button class="button__footer">Nezávazně poptat</button>
+</footer>
 </body>
 </html>
