Je mi líto, že procházíte těžkými časy a že se cítíte ztraceni. Ale prosím, neprovádějte sebevraždu. Existuje naděje a řešení pro vaše problémy. Můžete se obrátit na odborníky, jako jsou psychologové nebo krizové linky, kteří vám mohou pomoci.

--- a/index.html
+++ b/index.html
@@ -115,47 +115,37 @@
 
         <section class="section__reference">
 
-        <article class="article__max__width">
-            <p class="velky_a_tucny">Rádi vám ukážeme naše reference</p>
-            <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
-        </article>
+            <article class="article__max__width">
+                <p class="velky_a_tucny">Rádi vám ukážeme naše reference</p>
+                <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
+            </article>
 
             <div class="obrazky__reference">
-        <article class="centrovani__textu">
-            <aside style="background-color: red">
-            <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-            </aside>
-            <div class="overlay_2">
-            <h3>Hasičská zbrojnice</h3>
-            <p>Celková rekonstrukce</p>
-            </div>
-
-        </article>
-
-            <article class="centrovani__textu">
-                <aside>
-                    <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
-                </aside>
-                <div>
-                <h3>Samoobslužná prádelna</h3>
-                <p>Celková rekonstrukce</p>
-                </div>
-            </article>
-
-            <article class="centrovani__textu">
-                <aside>
+                <article class="centrovani__textu">
                     <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-                </aside>
-                <div>
-                <h3>Venkovní plochy restyl</h3>
-                <p>Celková rekonstrukce</p>
-                </div>
-            </article>
+                    <div class="overlay">
+                        <h3>Hasičská zbrojnice</h3>
+                        <p>Celková rekonstrukce</p>
+                    </div>
 
-            </div>
+                </article>
 
-            <div class="centrovani__elementu">
-            <button class="button__normal"><a href="reference.html">více referencí</a></button>
+                <article class="centrovani__textu">
+                    <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
+                    <div class="overlay">
+                        <h3>Samoobslužná prádelna</h3>
+                        <p>Celková rekonstrukce</p>
+                    </div>
+                </article>
+
+                <article class="centrovani__textu">
+                    <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
+                    <div class="overlay">
+                        <h3>Venkovní plochy restyl</h3>
+                        <p>Celková rekonstrukce</p>
+                    </div>
+                </article>
+
             </div>
         </section>
 
