--- a/kontakt.html
+++ b/kontakt.html
@@ -36,6 +36,7 @@
 </header>
 
 <main>
+    <section>
     <h1>Kontaktujte nás</h1>
     <div class="kontakt__icons">
 
@@ -63,6 +64,7 @@
 
         </buuton>
     </form>
+    </section>
 </main>
 
 </body>
