--- a/o_nas.html
+++ b/o_nas.html
@@ -27,7 +27,7 @@
             <li><a href="index.html"“>Domů</a></li>
             <li><a href=#sluzby>Služby</a></li>
             <li><a href="reference.html">Reference </a></li>
-            <li><a href="o_nas.html">O nás</a></li>
+            <li class="li__active"><a class="a__active" href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </menu>
     </nav>
@@ -35,6 +35,7 @@
 
 </header>
 <main>
+    <section>
     <article>
     <h1>O nás</h1>
     <p>polečnost HM Building.cz s.r.o. nabízí své služby ve stavebnictví od roku 2015, a to převážně po Libereckém kraji. </p>
@@ -51,6 +52,7 @@
 
         <p>Záruční doba na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
     </article>
+    </section>
 </main>
 <footer>
     <p>Plácneme si na váš projekt</p>
