--- a/sluzba_komunikace.html
+++ b/sluzba_komunikace.html
@@ -29,7 +29,7 @@
 
         <menu>
             <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
+            <li class="li__active"><a class="a__active" href=#sluzby>Služby</a></li>
             <li><a href="reference.html">Reference </a></li>
             <li><a href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
@@ -37,6 +37,7 @@
     </nav>
 </header>
 <main>
+    <section>
     <article>
         <h1>Komunikace a zpevněné plochy</h1>
         <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
@@ -53,6 +54,7 @@
             <li>komunikace pro pěší i pojezdové</li>
         </ul>
     </article>
+    </section>
 </main>
 <footer>
     <p>Plácneme si na váš projekt</p>
