--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </label>
 
             <menu>
-                <li><a href="index.html"“>Domů</a></li>
+                <li class="li__active"><a class="a__active" href="index.html">Domů</a></li>
                 <li><a href=#sluzby>Služby</a></li>
                 <li><a href="reference.html">Reference </a></li>
                 <li><a href="o_nas.html">O nás</a></li>
@@ -59,7 +59,7 @@
             <h2>Novostavby</h2>
             <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.</p>
             <p> Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
-            <button class="button__outline">Zobrazit více</button>
+                <button class="button__outline"><a href="sluzba_novostavby.html">Zobrazit více</a></button>
             </div>
         </article>
 
@@ -71,7 +71,7 @@
                 <h2>Průmyslové stavby</h2>
                 <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci. </p>
                 <p>Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
-                <button class="button__outline">Zobrazit více</button>
+                 <button class="button__outline"><a href="sluzba_prumyslove_stavby.html">Zobrazit více</a></button>
             </div>
 
 
@@ -84,18 +84,18 @@
             <div class="hlavni_obsah">
             <h2>Rekonstrukce domů a jiných staveb</h2>
             <p>Provádíme veškeré práce spojené s rekonstrukcí stávajících objektů. Pro naše klienty zajišťujeme dodatečné izolování objektů, zateplení objektů, změnu vnitřních i vnějších dispozic stávajících objektů a demolice stávajících staveb.</p>
-            <button class="button__outline">Zobrazit více</button>
+                <button class="button__outline"><a href="sluzba_rekonstrukce.html">Zobrazit více</a></button>
                 </div>
 
         </article>
         <article class="article__with__image reverse">
             <aside>
-                <img class="image__left" src="./Media/sluzba-rekonstrukce-1920w.jpg" alt="novostavby">
+                <img class="image__left" src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
             </aside>
             <div class="hlavni_obsah">
                 <h2>Komunikace a zpevnění plochy</h2>
                 <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
-                <button class="button__outline">Zobrazit více</button>
+                <button class="button__outline"><a href="sluzba_komunikace.html">Zobrazit více</a></button>
             </div>
 
 
@@ -122,28 +122,28 @@
 
             <div class="obrazky__reference">
                 <article class="centrovani__textu">
-                    <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-                    <div class="overlay">
+                    <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="zbrojnice">
+                    <a href="reference_hasicska_zbrojnice.html" class="overlay">
                         <h3>Hasičská zbrojnice</h3>
                         <p>Celková rekonstrukce</p>
-                    </div>
+                    </a>
 
                 </article>
 
                 <article class="centrovani__textu">
-                    <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
-                    <div class="overlay">
+                    <img src="./Media/reference/reference-pradelna-600w.jpg" alt="prádelna">
+                    <a href="reference_samoobluzna_prace.html" class="overlay">
                         <h3>Samoobslužná prádelna</h3>
                         <p>Celková rekonstrukce</p>
-                    </div>
+                    </a>
                 </article>
 
                 <article class="centrovani__textu">
-                    <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-                    <div class="overlay">
+                    <img src="./Media/reference/reference-plocha-600w.jpg" alt="plochy">
+                    <a href="reference_venkovsni_plochy.html" class="overlay">
                         <h3>Venkovní plochy restyl</h3>
                         <p>Celková rekonstrukce</p>
-                    </div>
+                    </a>
                 </article>
 
             </div>
