--- a/reference_samoobluzna_prace.html
+++ b/reference_samoobluzna_prace.html
@@ -26,7 +26,7 @@
         <menu>
             <li><a href="index.html"“>Domů</a></li>
             <li><a href=#sluzby>Služby</a></li>
-            <li><a href="reference.html">Reference </a></li>
+            <li class="li__active"><a class="a__active" href="reference.html">Reference </a></li>
             <li><a href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </menu>
