--- a/sluzba_novostavby.html
+++ b/sluzba_novostavby.html
@@ -25,7 +25,7 @@
 
         <menu>
             <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
+            <li class="li__active"><a class="a__active" href=#sluzby>Služby</a></li>
             <li><a href="reference.html">Reference </a></li>
             <li><a href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
@@ -33,6 +33,7 @@
     </nav>
 </header>
 <main>
+    <section>
     <article>
         <h1>Novostavby</h1>
         <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci. Provádíme stavby jak průmyslového typu, tak rodinné stavby. Stavba je prováděna dle projektové dokumentace dodané investorem
@@ -46,6 +47,7 @@
             <li>střešní konstrukce</li>
         </ul>
     </article>
+    </section>
 </main>
 <footer>
     <p>Plácneme si na váš projekt</p>
