--- a/sluzba_prumyslove_stavby.html
+++ b/sluzba_prumyslove_stavby.html
@@ -25,7 +25,7 @@
 
         <menu>
             <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
+            <li class="li__active"><a class="a__active" href=#sluzby>Služby</a></li>
             <li><a href="reference.html">Reference </a></li>
             <li><a href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
@@ -33,6 +33,7 @@
     </nav>
 </header>
 <main>
+    <section>
     <article>
         <h1>Průmyslové stavby</h1>
         <p>Realizujeme průmyslové objekty ocelové konstrukce, lehké ocelové (stanového typu), z prefabrikovaných dílců atd. Vzhledem k tomu, že vlastníme dostatek vlastní mechanizace, stáváme se nezávislými na ostatních subdodávkách a tím se dostáváme na přijatelné ceny.</p>
@@ -47,6 +48,7 @@
             </ul>
         </ul>
     </article>
+    </section>
 </main>
 <footer>
     <p>Plácneme si na váš projekt</p>
