--- a/sluzba_rekonstrukce.html
+++ b/sluzba_rekonstrukce.html
@@ -25,7 +25,7 @@
 
         <menu>
             <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
+            <li class="li__active"><a class="a__active" href=#sluzby>Služby</a></li>
             <li><a href="reference.html">Reference </a></li>
             <li><a href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
@@ -33,6 +33,7 @@
     </nav>
 </header>
 <main>
+    <section>
     <article>
         <h1>Rekonstrukce domů</h1>
         <p>Provádíme veškeré práce spojené s rekonstrukcí stávajících objektů.</p>
@@ -61,6 +62,7 @@
             <li>výměnná otvorových výplní</li>
         </ul>
     </article>
+    </section>
 </main>
 <footer>
     <p>Plácneme si na váš projekt</p>
